force-app/main/default/objects/Faculty_Custom_Data__mdt.object
<CustomObject>
    <description>Created for: PD | Holds: Faculty specific contact details to use in email templates | Match &apos;Faculty Name&apos; to Course object&apos;s picklist &apos;Managing Faculty&apos;</description>
    <fields>
        <fullName>Faculty_Email__c</fullName>
        <label>Faculty Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Faculty_Phone_Label__c</fullName>
        <label>Faculty Phone Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Phone__c</fullName>
        <label>Faculty Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Faculty_Student_Email_CC__c</fullName>
        <description>All emails going to the student via Salesforce will be copied to this email address.</description>
        <label>Faculty Student Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Faculty_Website_Label__c</fullName>
        <description>Display URL</description>
        <label>Faculty Website Label</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Faculty_Website_URL__c</fullName>
        <description>Actual URL</description>
        <label>Faculty Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Faculty_Website__c</fullName>
        <description>Display URL</description>
        <label>Faculty Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <label>Managing Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_URL__c</fullName>
        <label>Terms and Conditions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <description>Use in PD, for Magento API [Enabling multi faculty facility on Magento]</description>
        <label>Vendor ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Faculty Custom Data</label>
    <pluralLabel>Faculty Custom Data</pluralLabel>
</CustomObject>